--- a/index.html
+++ b/index.html
@@ -9,40 +9,44 @@
   <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
   <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
   <link rel="stylesheet" href="css/main.css">
-  <script src="js/app.js"></script>
+  <script src="js/app.js" defer></script>
 </head>
 <body class="main">
-  <header class="hero-section">
-    <img class="hero" src="img/hero.png" alt="Арт-картина">
-    <div class="container">
-      <div class="main-header">
-        <h1 class="main-title">creative scroll</h1>
-      </div>
+  <div class="wrapper">
+    <div class="content">
+      <header class="hero-section">
+        <img data-speed="0.6" class="hero" src="img/hero.png" alt="Арт-картина">
+        <div class="container">
+          <div data-speed="0.75" class="main-header">
+            <h1 class="main-title">creative scroll</h1>
+          </div>
+        </div>
+      </header>
+      <main class="portfolio">
+        <section class="container">
+          <ul class="gallery">
+            <li class="gallery__left">
+              <img class="gallery__item" src="img/work/1.jpg" alt="#">
+              <img class="gallery__item" src="img/work/2.jpg" alt="#">
+              <div class="gallery__item text-block">
+                <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
+                <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
+              </div>
+              <img class="gallery__item" src="img/work/6.jpg" alt="#">
+            </li>
+            <li class="gallery__right">
+              <div class="gallery__item text-block">
+                <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
+                <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
+              </div>
+              <img class="gallery__item" src="img/work/3.jpg" alt="#">
+              <img class="gallery__item" src="img/work/4.jpg" alt="#">
+              <img class="gallery__item" src="img/work/5.jpg" alt="#">
+            </li>
+          </ul>
+        </section>
+      </main>
     </div>
-  </header>
-  <main class="portfolio">
-    <section class="container">
-      <ul class="gallery">
-        <li class="gallery__left">
-          <img class="gallery__item" src="img/work/1.jpg" alt="#">
-          <img class="gallery__item" src="img/work/2.jpg" alt="#">
-          <div class="gallery__item text-block">
-            <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
-            <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
-          </div>
-          <img class="gallery__item" src="img/work/6.jpg" alt="#">
-        </li>
-        <li class="gallery__right">
-          <div class="gallery__item text-block">
-            <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
-            <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
-          </div>
-          <img class="gallery__item" src="img/work/3.jpg" alt="#">
-          <img class="gallery__item" src="img/work/4.jpg" alt="#">
-          <img class="gallery__item" src="img/work/5.jpg" alt="#">
-        </li>
-      </ul>
-    </section>
-  </main>
+  </div>
 </body>
 </html>
