--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <main class="portfolio">
         <section class="container">
           <ul class="gallery">
-            <li class="gallery__left">
+            <li data-speed="0.9" class="gallery__left">
               <img class="gallery__item" src="img/work/1.jpg" alt="#">
               <img class="gallery__item" src="img/work/2.jpg" alt="#">
               <div class="gallery__item text-block">
@@ -34,7 +34,7 @@
               </div>
               <img class="gallery__item" src="img/work/6.jpg" alt="#">
             </li>
-            <li class="gallery__right">
+            <li data-speed="1.1" class="gallery__right">
               <div class="gallery__item text-block">
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
