--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portfolio</title>
   <script src="libs/gsap/gsap.min.js" defer></script>
   <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
   <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
@@ -26,8 +26,8 @@
         <section class="container">
           <ul class="gallery">
             <li data-speed="0.9" class="gallery__left">
-              <img class="gallery__item" src="img/work/1.jpg" alt="#">
-              <img class="gallery__item" src="img/work/2.jpg" alt="#">
+              <img class="gallery__item" src="img/work/trip.png" alt="#">
+              <img class="gallery__item" src="img/work/coffee.png" alt="#">
               <div class="gallery__item text-block">
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
@@ -39,9 +39,9 @@
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
               </div>
-              <img class="gallery__item" src="img/work/3.jpg" alt="#">
-              <img class="gallery__item" src="img/work/4.jpg" alt="#">
-              <img class="gallery__item" src="img/work/5.jpg" alt="#">
+              <img class="gallery__item" src="img/work/insta.png" alt="#">
+              <img class="gallery__item" src="img/work/mishka.png" alt="#">
+              <img class="gallery__item" src="img/work/six-cities.png" alt="#">
             </li>
           </ul>
         </section>
