добавляет ссылки на проекты

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         <section class="container">
           <ul class="gallery">
             <li data-speed="0.9" class="gallery__left">
-              <img class="gallery__item" src="img/work/trip.png" alt="#">
-              <img class="gallery__item" src="img/work/coffee.png" alt="#">
+              <a href="https://htmlacademy-ecmascript.github.io/2058105-big-trip-20/14/">
+                <img class="gallery__item" src="img/work/trip.png" alt="Превью проекта 'Большое путешествие'.">
+              </a>
+              <a href="https://mitrofanna.github.io/coffee-shop/">
+                <img class="gallery__item" src="img/work/coffee.png" alt="Превью проекта 'Онлайн магазин кофейных напитков'.">
+              </a>
               <div class="gallery__item text-block">
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
@@ -39,9 +43,15 @@
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
               </div>
-              <img class="gallery__item" src="img/work/insta.png" alt="#">
-              <img class="gallery__item" src="img/work/mishka.png" alt="#">
-              <img class="gallery__item" src="img/work/six-cities.png" alt="#">
+              <a href="https://kekstagram-murex.vercel.app/">
+                <img class="gallery__item" src="img/work/insta.png" alt="Превью проекта 'Инстаграм'.">
+              </a>
+              <a href="https://mitrofanna.github.io/2058105-mishka-27/">
+                <img class="gallery__item" src="img/work/mishka.png" alt="Превью проекта 'Мишка'.">
+              </a>
+              <a href="https://github.com/Mitrofanna/2058105-six-cities-13">
+                <img class="gallery__item" src="img/work/six-cities.png" alt="Превью проекта 'Шесть городов'.">
+              </a>
             </li>
           </ul>
         </section>
