добавляет интерактивность элементам при ховере

--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
         <section class="container">
           <ul class="gallery">
             <li data-speed="0.9" class="gallery__left">
-              <a href="https://htmlacademy-ecmascript.github.io/2058105-big-trip-20/14/">
-                <img class="gallery__item" src="img/work/trip.png" alt="Превью проекта 'Большое путешествие'.">
-              </a>
-              <a href="https://mitrofanna.github.io/coffee-shop/">
-                <img class="gallery__item" src="img/work/coffee.png" alt="Превью проекта 'Онлайн магазин кофейных напитков'.">
-              </a>
+              <div class="gallery__item">
+                <img class="gallery__image" src="img/work/trip.png" width="506" height="285" alt="Превью проекта 'Большое путешествие'.">
+                <div class="gallery__details">
+                  <p class="gallery__text">Описание проекта</p>
+                  <div class="gallery__buttons">
+                    <a class="gallery__link" href="https://htmlacademy-ecmascript.github.io/2058105-big-trip-20/14/">Посмотреть</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-big-trip-20">githab</a>
+                  </div>
+                </div>
+              </div>
+              <div class="gallery__item">
+                <img class="gallery__image" src="img/work/coffee.png" width="506" height="285" alt="Превью проекта 'Онлайн магазин кофейных напитков'.">
+                <div class="gallery__details">
+                  <p class="gallery__text">Описание проекта</p>
+                  <div class="gallery__buttons">
+                    <a class="gallery__link" href="https://mitrofanna.github.io/coffee-shop/">Посмотреть</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/coffee-shop">githab</a>
+                  </div>
+                </div>
+              </div>               
               <div class="gallery__item text-block">
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
@@ -43,15 +57,36 @@
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
               </div>
-              <a href="https://kekstagram-murex.vercel.app/">
-                <img class="gallery__item" src="img/work/insta.png" alt="Превью проекта 'Инстаграм'.">
-              </a>
-              <a href="https://mitrofanna.github.io/2058105-mishka-27/">
-                <img class="gallery__item" src="img/work/mishka.png" alt="Превью проекта 'Мишка'.">
-              </a>
-              <a href="https://github.com/Mitrofanna/2058105-six-cities-13">
-                <img class="gallery__item" src="img/work/six-cities.png" alt="Превью проекта 'Шесть городов'.">
-              </a>
+              <div class="gallery__item">
+                <img class="gallery__image" src="img/work/insta.png" width="506" height="285" alt="Превью проекта 'Инстаграм'.">
+                <div class="gallery__details">
+                  <p class="gallery__text">Описание проекта</p>
+                  <div class="gallery__buttons">
+                    <a class="gallery__link" href="https://kekstagram-murex.vercel.app/">Посмотреть</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-kekstagram-28">githab</a>
+                  </div>
+                </div>
+              </div>
+              <div class="gallery__item">
+                <img class="gallery__image" src="img/work/mishka.png" width="506" height="285" alt="Превью проекта 'Мишка'.">
+                <div class="gallery__details">
+                  <p class="gallery__text">Описание проекта</p>
+                  <div class="gallery__buttons">
+                    <a class="gallery__link" href="https://mitrofanna.github.io/2058105-mishka-27/">Посмотреть</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-mishka-27">githab</a>
+                  </div>
+                </div>
+              </div>
+              <div class="gallery__item">
+                <img class="gallery__image" src="img/work/six-cities.png" width="506" height="285" alt="Превью проекта 'Шесть городов'.">
+                <div class="gallery__details">
+                  <p class="gallery__text">Описание проекта</p>
+                  <div class="gallery__buttons">
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-six-cities-13">Посмотреть</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-six-cities-13">githab</a>
+                  </div>
+                </div>
+              </div>
             </li>
           </ul>
         </section>
