--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Mitrofan</title>
   <script src="libs/gsap/gsap.min.js" defer></script>
   <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
   <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
