--- a/index.html
+++ b/index.html
@@ -29,20 +29,24 @@
               <div class="gallery__item">
                 <img class="gallery__image" src="img/work/trip.png" width="506" height="285" alt="Превью проекта 'Большое путешествие'.">
                 <div class="gallery__details">
-                  <p class="gallery__text">Описание проекта</p>
+                  <p class="gallery__text">Большое путешествие - приложение, для планирования путешествия.<br/> SPA - приложение, с использованием классовых компонентов.<br/> JavaScript, MVP, ООП, webpack.</p>
                   <div class="gallery__buttons">
                     <a class="gallery__link" href="https://htmlacademy-ecmascript.github.io/2058105-big-trip-20/14/">Посмотреть</a>
-                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-big-trip-20">githab</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-big-trip-20">githab
+                      <svg class="gallery__icon" aria-hidden="true" focusable="false" fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/></svg>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="gallery__item">
                 <img class="gallery__image" src="img/work/coffee.png" width="506" height="285" alt="Превью проекта 'Онлайн магазин кофейных напитков'.">
                 <div class="gallery__details">
-                  <p class="gallery__text">Описание проекта</p>
+                  <p class="gallery__text">Магазин кофейных напитков.<br/>Подключены сторонние библиотеки - no-UiSlider, Swiper, карта Leaflet.<br/>JavaScript, Sass(Scss), gulp.</p>
                   <div class="gallery__buttons">
                     <a class="gallery__link" href="https://mitrofanna.github.io/coffee-shop/">Посмотреть</a>
-                    <a class="gallery__link" href="https://github.com/Mitrofanna/coffee-shop">githab</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/coffee-shop">githab
+                      <svg class="gallery__icon" aria-hidden="true" focusable="false" fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/></svg>
+                    </a>
                   </div>
                 </div>
               </div>               
@@ -60,30 +64,36 @@
               <div class="gallery__item">
                 <img class="gallery__image" src="img/work/insta.png" width="506" height="285" alt="Превью проекта 'Инстаграм'.">
                 <div class="gallery__details">
-                  <p class="gallery__text">Описание проекта</p>
+                  <p class="gallery__text">Инстаграм - сервис для просмотра и загрузки фотографий.<br/>Подкючена библиотека no-UiSlider, для наложения фильтров на фото.<br/>JavaScript.</p>
                   <div class="gallery__buttons">
                     <a class="gallery__link" href="https://kekstagram-murex.vercel.app/">Посмотреть</a>
-                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-kekstagram-28">githab</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-kekstagram-28">githab
+                      <svg class="gallery__icon" aria-hidden="true" focusable="false" fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/></svg>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="gallery__item">
                 <img class="gallery__image" src="img/work/mishka.png" width="506" height="285" alt="Превью проекта 'Мишка'.">
                 <div class="gallery__details">
-                  <p class="gallery__text">Описание проекта</p>
+                  <p class="gallery__text">Магазин вязаных изделий.<br/>Адаптивная кроссбраузерная верстка, с использованием препроцессоров Sass(Scss).<br/> Реализовано бургерное меню для мобильной версии.</p>
                   <div class="gallery__buttons">
                     <a class="gallery__link" href="https://mitrofanna.github.io/2058105-mishka-27/">Посмотреть</a>
-                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-mishka-27">githab</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-mishka-27">githab
+                      <svg class="gallery__icon" aria-hidden="true" focusable="false" fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/></svg>
+                    </a>
                   </div>
                 </div>
               </div>
               <div class="gallery__item">
                 <img class="gallery__image" src="img/work/six-cities.png" width="506" height="285" alt="Превью проекта 'Шесть городов'.">
                 <div class="gallery__details">
-                  <p class="gallery__text">Описание проекта</p>
+                  <p class="gallery__text">Шесть городов - приложение по аренде жилья.<br/>React, TypeScript, Redux, Redux-Toolkit, JSX.</p>
                   <div class="gallery__buttons">
                     <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-six-cities-13">Посмотреть</a>
-                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-six-cities-13">githab</a>
+                    <a class="gallery__link" href="https://github.com/Mitrofanna/2058105-six-cities-13">githab
+                      <svg class="gallery__icon" aria-hidden="true" focusable="false" fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/></svg>
+                    </a>
                   </div>
                 </div>
               </div>
