удаляет лишний элемент

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img data-speed="0.6" class="hero" src="img/hero.png" alt="Арт-картина">
         <div class="container">
           <div data-speed="0.75" class="main-header">
-            <h1 class="main-title">creative scroll</h1>
+            <h1 class="main-title"></h1>
           </div>
         </div>
       </header>
@@ -54,7 +54,6 @@
                 <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
                 <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
               </div>
-              <img class="gallery__item" src="img/work/6.jpg" alt="#">
             </li>
             <li data-speed="1.1" class="gallery__right">
               <div class="gallery__item text-block">
