--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <img data-speed="0.6" class="hero" src="img/hero.png" alt="Арт-картина">
         <div class="container">
           <div data-speed="0.75" class="main-header">
-            <h1 class="main-title"></h1>
+            <h2 class="text-block__about">Немного обо мне:</h2>
+            <p class="text-block__hero">Митрофанова Анастасия<br/>33года<br/>Самара, Россия</p>
+            <p class="text-block__about-me">Я фронтенд разработчик, уверенно владею JS, React, Redux, TypeScript.<br/> Разработку веду в git.
+            <br/> Закончила курсы в 'HTML Academy' по JavaScript, React, адаптивной верстке по БЭМ.<br/> Прошла 3х месячную стажировку в 'ЛИГА А', где писали небольшие проекты в команде с тестировщиками и наставником.</p>
           </div>
         </div>
       </header>
@@ -51,14 +54,17 @@
                 </div>
               </div>               
               <div class="gallery__item text-block">
-                <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
-                <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
+                <h2 class="text-block__title text-block__animation">Давайте работать вместе</h2>
+                <p class="text-block__description">mitrofanovaa70@gmail.ru</p>
+                <p class="text-block__description">+79999754413</p>
+                <a class="gallery__link gallery__link-contact" href="https://github.com/Mitrofanna">githab
+                  <svg class="gallery__icon" aria-hidden="true" focusable="false" fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M10.9,2.1c-4.6,0.5-8.3,4.2-8.8,8.7c-0.5,4.7,2.2,8.9,6.3,10.5C8.7,21.4,9,21.2,9,20.8v-1.6c0,0-0.4,0.1-0.9,0.1 c-1.4,0-2-1.2-2.1-1.9c-0.1-0.4-0.3-0.7-0.6-1C5.1,16.3,5,16.3,5,16.2C5,16,5.3,16,5.4,16c0.6,0,1.1,0.7,1.3,1c0.5,0.8,1.1,1,1.4,1 c0.4,0,0.7-0.1,0.9-0.2c0.1-0.7,0.4-1.4,1-1.8c-2.3-0.5-4-1.8-4-4c0-1.1,0.5-2.2,1.2-3C7.1,8.8,7,8.3,7,7.6C7,7.2,7,6.6,7.3,6 c0,0,1.4,0,2.8,1.3C10.6,7.1,11.3,7,12,7s1.4,0.1,2,0.3C15.3,6,16.8,6,16.8,6C17,6.6,17,7.2,17,7.6c0,0.8-0.1,1.2-0.2,1.4 c0.7,0.8,1.2,1.8,1.2,3c0,2.2-1.7,3.5-4,4c0.6,0.5,1,1.4,1,2.3v2.6c0,0.3,0.3,0.6,0.7,0.5c3.7-1.5,6.3-5.1,6.3-9.3 C22,6.1,16.9,1.4,10.9,2.1z"/></svg>
+                </a>
               </div>
             </li>
             <li data-speed="1.1" class="gallery__right">
               <div class="gallery__item text-block">
-                <h2 class="text-block__title">Создание плавного скролла с параллакс эффектом.</h2>
-                <p class="text-block__description">Здесь может быть любой текст, так как сайт создавался мной в учебных целях.</p>
+                <h2 class="text-block__title text-block__animation">Мои работы</h2>
               </div>
               <div class="gallery__item">
                 <img class="gallery__image" src="img/work/insta.png" width="506" height="285" alt="Превью проекта 'Инстаграм'.">
