--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img data-speed="0.6" class="hero" src="img/hero.png" alt="Арт-картина">
         <div class="container">
           <div data-speed="0.75" class="main-header">
-            <h2 class="text-block__about">Немного обо мне:</h2>
+            <h2 class="text-block__title text-block__animation text-block__about">Немного обо мне:</h2>
             <p class="text-block__hero">Митрофанова Анастасия<br/>33года<br/>Самара, Россия</p>
             <p class="text-block__about-me">Я фронтенд разработчик, уверенно владею JS, React, Redux, TypeScript.<br/> Разработку веду в git.
             <br/> Закончила курсы в 'HTML Academy' по JavaScript, React, адаптивной верстке по БЭМ.<br/> Прошла 3х месячную стажировку в 'ЛИГА А', где писали небольшие проекты в команде с тестировщиками и наставником.</p>
