удаляет ненужный блок

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="wrapper">
       <div class="content">
         <div class="promo">
+          <img data-speed="0.6" class="hero" src="img/hero.png" alt="Арт-картина" />
           <h1 class="promo__title">Фронтенд разработчик</h1>
           <h2 class="promo__about text-block__animation text-block__title">Обо мне</h2>
           <ul class="promo__list">
@@ -62,17 +63,6 @@
             </li>
           </ul>
         </div>
-        <!-- <header class="hero-section">
-        <img data-speed="0.6" class="hero" src="img/hero.png" alt="Арт-картина">
-        <div class="container">
-          <div data-speed="0.75" class="main-header">
-            <h2 class="text-block__title text-block__animation text-block__about">Немного обо мне:</h2>
-            <p class="text-block__hero">Митрофанова Анастасия<br/>33года <br/>Самара, Россия</p>
-            <p class="text-block__about-me">Я фронтенд разработчик, уверенно знаю JS, MVP, React, Redux, TypeScript<br/> Разработку веду в git.
-            <br/> Закончила курсы в 'HTML Academy' по JavaScript, React, адаптивной верстке по БЭМ.<br/> Прошла 3х месячную стажировку в 'ЛИГА А', где писали небольшие проекты в команде с тестировщиками и наставником.</p>
-          </div>
-        </div>
-      </header> -->
         <main class="portfolio">
           <section class="container">
             <ul class="gallery">
